# VB_CS4085_Assignment

./: .gitignore  Custom3dfile.py  README.md  assettest.c3d  test-obj.c3d  test.c3d  test_obj.c3d
3dsmax_attempt2/: CMakeLists.txt
3dsmax_attempt2/src/: C3DExporter.cpp  C3DExporter.def  C3DExporter.h
ue5_custom_plugin/ue5_scene/Plugins/CustomFormat/: CustomFormat.uplugin
ue5_custom_plugin/ue5_scene/Plugins/CustomFormat/Source/CustomFormat/: CustomFormat.Build.cs
ue5_plugin/plugin_scene/Plugins/format3d/: format3d.uplugin
ue5_plugin/plugin_scene/Plugins/format3d/Binaries/Win64/: UnrealEditor-format3d.patch_0.exp  UnrealEditor-format3d.patch_0.lib  UnrealEditor-format3d.patch_1.exp  UnrealEditor-format3d.patch_1.lib  UnrealEditor-format3d.patch_10.exp  UnrealEditor-format3d.patch_10.lib  UnrealEditor-format3d.patch_11.exp  UnrealEditor-format3d.patch_11.lib  UnrealEditor-format3d.patch_12.exp  UnrealEditor-format3d.patch_12.lib  UnrealEditor-format3d.patch_2.exp  UnrealEditor-format3d.patch_2.lib  UnrealEditor-format3d.patch_3.exp  UnrealEditor-format3d.patch_3.lib  UnrealEditor-format3d.patch_4.exp  UnrealEditor-format3d.patch_4.lib  UnrealEditor-format3d.patch_5.exp  UnrealEditor-format3d.patch_5.lib  UnrealEditor-format3d.patch_6.exp  UnrealEditor-format3d.patch_6.lib  UnrealEditor-format3d.patch_7.exp  UnrealEditor-format3d.patch_7.lib  UnrealEditor-format3d.patch_8.exp  UnrealEditor-format3d.patch_8.lib  UnrealEditor-format3d.patch_9.exp  UnrealEditor-format3d.patch_9.lib  UnrealEditor.modules
ue5_plugin/plugin_scene/Plugins/format3d/Content/: test.uasset
(+7 files in other folders)
